# svg.cc

./: .gitignore  .gitmodules  CMakeLists.txt  Compiler.cmake  External.cmake  README.md  svg.cc.h
docs/: Gemfile  _config.yml  index.md  svgplot.md
docs/_includes/: includelines
docs/_site/: feed.xml  index.md
docs/_site/svgplot/: imshow.md
docs/figure-inset/: bottom.sh  figure-inset.md  full.sh  right.sh
docs/svgplot/: bar.cc  bar.md  color.md  colormap.cc  colormap.md  hist.cc  hist.md  imshow.cc  imshow.md  plot.cc  plot.md  scatter.cc  scatter.md  subplot.cc  subplot.md
examples/circle/: main.cc
examples/represent/: main.cc
examples/status/: main.cc
main/embed-images/: main.cc
main/figure-inset/: layout-horizontal-images-bottom-insets.h  layout-single-image-bottom-insets.h  layout-single-image-right-insets.h  layout.h  main.cc
main/plot/: headeronly.cc  plot-headeronly.cc  plot.cc  savefig.cc  scatter.cc
main/represent/: main.cc
main/status/: main.cc
plot/: arange.h  axis-scale.h  bar.h  barh.h  colormap.h  hist.h  imshow.h  linspace.h  plot.h  plottable.h  scatter.h  svgplot-headeronly.h  svgplot.h
plot/src/: axis-scale.cc  axis-scale.h  bar.cc  barh.cc  bmp.h  color.cc  color.h  colormap.cc  hist.cc  imshow.cc  plot.cc  scatter.cc  svgplot.cc
src/: aspect-ratio-attributes.h  base64.h  circle.h  clip.h  clipPath.h  color.h  core-attributes.h  defs.h  element.h  ellipse.h  font-weight.h  font.h  geometry-attributes.h  graphical-attributes.h  group.h  image.h  length.h  line.h  mask.h  node.h  path.h  poly.h  presentation-attributes.h  rect.h  script.h  search.h  style.h  svg.h  text-alignment.h  text-presentation-attributes.h  text.h  transform.h  use.h
svg/: represent-all.sh
